simple/canary/Rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: birdie
spec:
  replicas: 10
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: birdie
  template:
    metadata:
      labels:
        app: birdie
    spec:
      containers:
      - name: birdie
        image: argoproj/rollouts-demo:blue
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
  strategy:
    canary: #Indicates that the rollout should use the Canary strategy
      maxSurge: "25%"
      maxUnavailable: 0
      canaryService: birdie-preview
      steps:
      - setWeight: 10
      - pause:
          duration: 1h # 1 hour
      - setWeight: 20
      - pause: {} # pause indefinitely
