simple/canary/route-preview.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: birdie
    app.kubernetes.io/component: birdie
    app.kubernetes.io/instance: argo-rollout-simple
  name: birdie-preview
  namespace: argo-rollout-simple
spec:
  host: birdie-preview-argo-rollout-simple.apps.ocp4.private.opequon.net
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: birdie-preview
    weight: 100
  wildcardPolicy: None
