simple/canary/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: birdie
    app.kubernetes.io/component: birdie
    app.kubernetes.io/instance: birdie
  name: birdie
  namespace: argo-rollout-simple
spec:
  host: birdie-argo-rollout-simple.apps.ocp4.private.opequon.net
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: birdie
    weight: 100
  wildcardPolicy: None
